--- a/src/main/resources/templates/studentinfo/studentinfo/add.html
+++ b/src/main/resources/templates/studentinfo/studentinfo/add.html
@@ -1,55 +1,60 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org" >
+<html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:include="include :: header('新增学生信息')" />
+    <th:block th:include="include :: header('新增学生信息')"/>
 </head>
 <body class="white-bg">
-    <div class="wrapper wrapper-content animated fadeInRight ibox-content">
-        <form class="form-horizontal m" id="form-studentinfo-add">
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">删除标识 0=未删除,1=已删除：</label>
-                <div class="col-sm-8">
-                    <input name="delFlag" class="form-control" type="text">
+<div class="wrapper wrapper-content animated fadeInRight ibox-content">
+    <form class="form-horizontal m" id="form-studentinfo-add">
+        <input name="classId" th:value="${classId}" type="hidden">
+        <div class="form-group">
+            <label class="col-sm-3 control-label is-required">学生姓名：</label>
+            <div class="col-sm-8">
+                <input name="studentName" class="form-control" type="text" required>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">学号：</label>
+            <div class="col-sm-8">
+                <input name="studentNum" class="form-control" type="text">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">性别：</label>
+            <div class="col-sm-8">
+                <div class="radio-box" th:each="dict : ${@dict.getType('sys_user_sex')}">
+                    <input type="radio" th:id="${dict.dictCode}" name="studentGender" th:value="${dict.dictValue}"
+                           th:checked="${dict.default}">
+                    <label th:for="${dict.dictCode}" th:text="${dict.dictLabel}"></label>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-3 control-label">备注：</label>
-                <div class="col-sm-8">
-                    <textarea name="remark" class="form-control"></textarea>
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">标签：</label>
+            <div class="col-sm-8">
+                <input name="studentTag" class="form-control" type="text">
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">学生姓名：</label>
-                <div class="col-sm-8">
-                    <input name="studentName" class="form-control" type="text">
-                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">备注：</label>
+            <div class="col-sm-8">
+                <textarea name="remark" class="form-control"></textarea>
             </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">学号：</label>
-                <div class="col-sm-8">
-                    <input name="studentNum" class="form-control" type="text">
-                </div>
-            </div>
-            <div class="form-group">    
-                <label class="col-sm-3 control-label">标签：</label>
-                <div class="col-sm-8">
-                    <input name="studentTag" class="form-control" type="text">
-                </div>
-            </div>
-        </form>
-    </div>
-    <th:block th:include="include :: footer" />
-    <script th:inline="javascript">
-        var prefix = ctx + "studentinfo/studentinfo"
-        $("#form-studentinfo-add").validate({
-            focusCleanup: true
-        });
+        </div>
+    </form>
+</div>
+<th:block th:include="include :: footer"/>
+<script th:inline="javascript">
+    var prefix = ctx + "studentinfo/studentinfo"
+    $("#form-studentinfo-add").validate({
+        focusCleanup: true
+    });
 
-        function submitHandler() {
-            if ($.validate.form()) {
-                $.operate.save(prefix + "/add", $('#form-studentinfo-add').serialize());
-            }
+    function submitHandler() {
+        if ($.validate.form()) {
+            $.operate.save(prefix + "/add", $('#form-studentinfo-add').serialize());
         }
-    </script>
+    }
+</script>
 </body>
 </html>
