--- a/src/main/resources/templates/studentinfo/studentinfo/edit.html
+++ b/src/main/resources/templates/studentinfo/studentinfo/edit.html
@@ -7,12 +7,6 @@
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-studentinfo-edit" th:object="${studentInfo}">
             <input name="id" th:field="*{id}" type="hidden">
-            <div class="form-group">
-                <label class="col-sm-3 control-label">备注：</label>
-                <div class="col-sm-8">
-                    <textarea name="remark" class="form-control">[[*{remark}]]</textarea>
-                </div>
-            </div>
             <div class="form-group">    
                 <label class="col-sm-3 control-label">学生姓名：</label>
                 <div class="col-sm-8">
@@ -25,10 +19,25 @@
                     <input name="studentNum" th:field="*{studentNum}" class="form-control" type="text">
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">性别：</label>
+                <div class="col-sm-8">
+                    <div class="radio-box" th:each="dict : ${@dict.getType('sys_user_sex')}">
+                        <input type="radio" th:id="${dict.dictCode}" name="studentGender" th:value="${dict.dictValue}" th:field="*{studentGender}">
+                        <label th:for="${dict.dictCode}" th:text="${dict.dictLabel}"></label>
+                    </div>
+                </div>
+            </div>
             <div class="form-group">    
                 <label class="col-sm-3 control-label">标签：</label>
                 <div class="col-sm-8">
                     <input name="studentTag" th:field="*{studentTag}" class="form-control" type="text">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">备注：</label>
+                <div class="col-sm-8">
+                    <textarea name="remark" class="form-control">[[*{remark}]]</textarea>
                 </div>
             </div>
         </form>
