--- a/src/main/resources/templates/studentinfo/studentinfo/studentinfo.html
+++ b/src/main/resources/templates/studentinfo/studentinfo/studentinfo.html
@@ -20,7 +20,6 @@
             </div>
         </div>
         <div class="ui-layout-content">
-            <input type="hidden" id="treeId" value="2">
             <div id="tree" class="ztree"></div>
         </div>
     </div>
@@ -30,7 +29,7 @@
         <div class="row">
             <div class="col-sm-12 search-collapse">
                 <form id="formId">
-                    <input type="text" id="classId" name="classId">
+                    <input type="hidden" id="treeId" name="classId" class="classId">
                     <div class="select-list">
                         <ul>
                             <li>
@@ -40,6 +39,14 @@
                             <li>
                                 <label>学号：</label>
                                 <input type="text" name="studentNum"/>
+                            </li>
+                            <li>
+                                <label>性别：</label>
+                                <select name="studentGender" th:with="type=${@dict.getType('sys_user_sex')}">
+                                    <option value="">所有</option>
+                                    <option th:each="dict : ${type}" th:text="${dict.dictLabel}"
+                                            th:value="${dict.dictValue}"></option>
+                                </select>
                             </li>
                             <li>
                                 <label>标签：</label>
@@ -57,7 +64,7 @@
             </div>
 
             <div class="btn-group-sm" id="toolbar" role="group">
-                <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="studentinfo:studentinfo:add">
+                <a class="btn btn-success" onclick="addStudent()" shiro:hasPermission="studentinfo:studentinfo:add">
                     <i class="fa fa-plus"></i> 添加
                 </a>
                 <a class="btn btn-primary single disabled" onclick="$.operate.edit()"
@@ -67,6 +74,10 @@
                 <a class="btn btn-danger multiple disabled" onclick="$.operate.removeAll()"
                    shiro:hasPermission="studentinfo:studentinfo:remove">
                     <i class="fa fa-remove"></i> 删除
+                </a>
+                <a class="btn btn-info" onclick="importExcel()"
+                   shiro:hasPermission="studentinfo:studentinfo:import">
+                    <i class="fa fa-upload"></i> 导入
                 </a>
                 <a class="btn btn-warning" onclick="$.table.exportExcel()"
                    shiro:hasPermission="studentinfo:studentinfo:export">
@@ -85,6 +96,9 @@
 <script th:inline="javascript">
     var editFlag = [[${@permission.hasPermi('studentinfo:studentinfo:edit')}]];
     var removeFlag = [[${@permission.hasPermi('studentinfo:studentinfo:remove')}]];
+
+    var studentGenderData = [[${@dict.getType('sys_user_sex')}]];
+
     var prefix = ctx + "studentinfo/studentinfo";
     $(function () {
         var panehHidden = false;
@@ -100,7 +114,6 @@
             };
             $('#scroll-up').toTop(opt);
         }
-        initTable();
         initTree();
     });
 
@@ -111,11 +124,12 @@
             expandLevel: 2,
             onClick: zOnClick,
             check: true,
+            callBack: initTable
         };
         $.tree.init(options);
 
         function zOnClick(event, treeId, treeNode) {
-            $("#classId").val(treeNode.id);
+            $("#treeId").val(treeNode.id);
             $.table.search();
         }
     }
@@ -129,7 +143,6 @@
         resetDate();
         $("#formId")[0].reset();
         $("#classId").val("");
-        $(".curSelectedNode").removeClass("curSelectedNode");
         $.table.search();
     }
 
@@ -146,6 +159,8 @@
             updateUrl: prefix + "/edit/{id}",
             removeUrl: prefix + "/remove",
             exportUrl: prefix + "/export",
+            importUrl: prefix + "/importData",
+            importTemplateUrl: prefix + "/importTemplate",
             modalName: "学生信息",
             columns: [{
                 checkbox: true
@@ -156,16 +171,19 @@
                     visible: false
                 },
                 {
-                    field: 'remark',
-                    title: '备注'
-                },
-                {
                     field: 'studentName',
                     title: '学生姓名'
                 },
                 {
                     field: 'studentNum',
                     title: '学号'
+                },
+                {
+                    field: 'studentGender',
+                    title: '性别',
+                    formatter: function (value, row, index) {
+                        return $.table.selectDictLabel(studentGenderData, value);
+                    }
                 },
                 {
                     field: 'studentTag',
@@ -185,6 +203,38 @@
         $.table.init(options);
     }
 
+    function addStudent() {
+        table.set();
+        let classId = $(".classId").val();
+        let url = prefix + "/add?classId=" + classId;
+        $.modal.open("添加" + table.options.modalName, url);
+    }
+
+    function importExcel() {
+        let classId = $("#treeId").val();
+        let $importTpl = $('#importTpl');
+        let html = $importTpl.html();
+        html = html.replace("classIdValue", classId)
+        $importTpl.html(html);
+        $.table.importExcel();
+    }
+
 </script>
 </body>
+<!-- 导入区域 -->
+<script id="importTpl" type="text/template">
+    <form enctype="multipart/form-data" class="mt20 mb10">
+        <div class="col-xs-offset-1">
+            <input type="file" id="file" name="file"/>
+            <div class="mt10 pt5">
+                <input type="hidden" value="classIdValue" id="importExcelClassId" name="classId">
+                &nbsp; <a onclick="$.table.importTemplate()" class="btn btn-default btn-xs"><i
+                    class="fa fa-file-excel-o"></i> 下载模板</a>
+            </div>
+            <font color="red" class="pull-left mt10">
+                提示：仅允许导入“xls”或“xlsx”格式文件！
+            </font>
+        </div>
+    </form>
+</script>
 </html>
