--- a/src/main/resources/static/barracuda/css/reference.css
+++ b/src/main/resources/static/barracuda/css/reference.css
@@ -9,3 +9,19 @@
 .kv-file-upload {
     display: none;
 }
+
+.bottom-blank {
+    height: 10vh;
+    float: left;
+    width: 100%;
+}
+
+.file-name {
+    padding-top: 7px;
+    margin-bottom: 0;
+}
+
+.delete-file, .delete-file:hover {
+    color: red;
+    padding-left: 5px;
+}
