--- a/src/main/resources/templates/reference/reference/add.html
+++ b/src/main/resources/templates/reference/reference/add.html
@@ -3,94 +3,67 @@
 <head>
     <th:block th:include="include :: header('新增参考资料')"/>
     <th:block th:include="include :: summernote-css"/>
-    <th:block th:include="include :: bootstrap-fileinput-css"/>
     <link th:href="@{/barracuda/css/reference.css}" rel="stylesheet"/>
+    <link th:href="@{/barracuda/css/file-pocket.css}" rel="stylesheet"/>
 </head>
 <body class="white-bg">
 <div class="wrapper wrapper-content animated fadeInRight ibox-content">
     <form class="form-horizontal m" id="form-reference-add">
-        <div class="form-group">
-            <label class="col-sm-3 control-label is-required">资料标题：</label>
-            <div class="col-sm-8">
-                <input required name="referenceTitle" class="form-control" type="text">
+        <div class="col-sm-9">
+            <div class="form-group">
+                <div class="row">
+                    <input placeholder="资料标题" required name="referenceTitle"
+                           class="form-control" type="text">
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label is-required">资料文字内容：</label>
-            <div class="col-sm-8">
-                <input type="hidden" required class="form-control" name="referenceContent">
-                <div class="summernote" id="referenceContent"></div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label">文件：</label>
-            <div class="col-sm-8">
-                <div class="file-loading">
-                    <input id="multipleFile" name="files" type="file" multiple>
+            <div class="form-group">
+                <div class="row">
+                    <input type="hidden" required class="form-control" name="referenceContent">
+                    <div class="summernote" id="referenceContent">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label"></label>
-            <div class="col-sm-8">
-                <button type="button" class="btn btn-sm btn-primary" onclick="submitHandler()"><i
-                        class="fa fa-check"></i>保 存
-                </button>&nbsp;
-                <button type="button" class="btn btn-sm btn-danger" onclick="closeItem()"><i
-                        class="fa fa-reply-all"></i>关 闭
-                </button>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label class="col-sm-2 control-label">文件：</label>
+                <div class="col-sm-10" id="file-div" style="height: 50vh">
+
+                </div>
             </div>
         </div>
     </form>
+    <div class="col-sm-12">
+        <div class="row">
+            <button type="button" class="btn btn-sm btn-primary" onclick="submitHandler()">
+                <i class="fa fa-check"></i>保 存
+            </button>&nbsp;
+            <button type="button" class="btn btn-sm btn-default" onclick="closeItem()">
+                <i class="fa fa-reply-all"></i>关 闭
+            </button>
+        </div>
+    </div>
+    <div class="bottom-blank"></div>
 </div>
 <th:block th:include="include :: footer"/>
 <th:block th:include="include :: summernote-js"/>
-<th:block th:include="include :: bootstrap-fileinput-js"/>
 <script th:src="@{/barracuda/js/reference.js}"></script>
+<script th:src="@{/barracuda/js/document.js}"></script>
+<script th:src="@{/barracuda/js/file-pocket.js}"></script>
 <script th:inline="javascript">
     var prefix = ctx + "reference/reference"
+
+    let filePocket = {};
     $("#form-reference-add").validate({
         focusCleanup: true
     });
 
-    function checkAllowUpload(formData) {
-        let result = false;
-        let url = ctx + "document/document/checkAllowUpload"
-        const config = {
-            url: url,
-            type: "post",
-            dataType: "json",
-            data: formData,
-            contentType: false,
-            processData: false,
-            async: false,
-            beforeSend: function () {
-                $.modal.loading("正在处理中，请稍候...");
-            },
-            success: function (res) {
-                if (res.code == web_status.SUCCESS) {
-                    result = true;
-                } else if (res.code == web_status.WARNING) {
-                    result = false;
-                    $.modal.alertWarning(res.msg)
-                } else {
-                    result = false
-                    $.modal.alertError(res.msg);
-                }
-                $.modal.closeLoading();
-            }
-        };
-        $.ajax(config);
-        return result;
-    }
-
     function submitHandler() {
         if ($.validate.form()) {
             let formData = new FormData(document.getElementById("form-reference-add"));
-            let files = $("#multipleFile")[0].files;
-            formData.append("files", files);
-            if (files.length > 0 && !checkAllowUpload(formData)) {
-                return
+            let listDocumentIds = filePocket.listDocumentIds();
+            if (listDocumentIds.length > 0) {
+                formData.append("documentIds", listDocumentIds)
             }
             let url = prefix + "/add";
             let config = {
@@ -113,7 +86,8 @@
 
     $(function () {
         initSummernoteOfAddPage();
-        initFileInput();
+        let filePocketId = "file-div";
+        filePocket = FilePocketJs.createFilePocket(filePocketId);
     });
 </script>
 </body>
