--- a/src/main/resources/templates/reference/reference/edit.html
+++ b/src/main/resources/templates/reference/reference/edit.html
@@ -3,46 +3,96 @@
 <head>
     <th:block th:include="include :: header('修改参考资料')"/>
     <th:block th:include="include :: summernote-css"/>
-    <th:block th:include="include :: bootstrap-fileinput-css"/>
     <link th:href="@{/barracuda/css/reference.css}" rel="stylesheet"/>
+    <link th:href="@{/barracuda/css/file-pocket.css}" rel="stylesheet"/>
 </head>
 <body class="white-bg">
 <div class="wrapper wrapper-content animated fadeInRight ibox-content">
     <form class="form-horizontal m" id="form-reference-edit" th:object="${reference}">
         <input name="id" th:field="*{id}" type="hidden">
-        <div class="form-group">
-            <label class="col-sm-3 control-label">资料标题：</label>
-            <div class="col-sm-8">
-                <input name="referenceTitle" th:field="*{referenceTitle}" class="form-control" type="text">
+        <div class="col-sm-9">
+            <div class="form-group">
+                <div class="row">
+                    <input placeholder="资料标题" name="referenceTitle" th:field="*{referenceTitle}"
+                           class="form-control" type="text">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <input type="hidden" class="form-control" th:field="*{referenceContent}">
+                    <div class="summernote" id="referenceContent">
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label">资料文字内容：</label>
-            <div class="col-sm-8">
-                <input type="hidden" class="form-control" th:field="*{referenceContent}">
-                <div class="summernote" id="referenceContent"></div>
+        <div class="col-sm-3">
+            <div class="form-group">
+                <label class="col-sm-2 control-label">文件：</label>
+                <div class="col-sm-10" id="file-div" style="height: 50vh">
+
+                </div>
             </div>
         </div>
     </form>
+    <div class="col-sm-12">
+        <div class="row">
+            <button type="button" class="btn btn-sm btn-primary" onclick="submitHandler()">
+                <i class="fa fa-check"></i>保 存
+            </button>&nbsp;
+            <button type="button" class="btn btn-sm btn-danger" onclick="closeItem()">
+                <i class="fa fa-reply-all"></i>关 闭
+            </button>
+        </div>
+    </div>
 </div>
 <th:block th:include="include :: footer"/>
 <th:block th:include="include :: summernote-js"/>
-<th:block th:include="include :: bootstrap-fileinput-js"/>
 <script th:src="@{/barracuda/js/reference.js}"></script>
+<script th:src="@{/barracuda/js/document.js}"></script>
+<script th:src="@{/barracuda/js/file-pocket.js}"></script>
 <script th:inline="javascript">
     var prefix = ctx + "reference/reference";
+    // 附件
+    let documents = [[${documents}]];
+    console.log(documents);
+
     $("#form-reference-edit").validate({
         focusCleanup: true
     });
 
     function submitHandler() {
         if ($.validate.form()) {
-            $.operate.save(prefix + "/edit", $('#form-reference-edit').serialize());
+            let formData = new FormData(document.getElementById("form-reference-edit"));
+            let listDocumentIds = filePocket.listDocumentIds();
+            if (listDocumentIds.length > 0) {
+                formData.append("documentIds", listDocumentIds)
+            }
+            let url = prefix + "/edit";
+            let config = {
+                url: url,
+                type: "post",
+                dataType: "json",
+                data: formData,
+                contentType: false,
+                processData: false,
+                beforeSend: function () {
+                    $.modal.loading("正在处理中，请稍候...");
+                },
+                success: function (result) {
+                    $.operate.successTabCallback(result);
+                }
+            };
+            $.ajax(config)
         }
     }
 
     $(function () {
         initSummernoteOfEditPage();
+        let filePocketId = "file-div";
+        filePocket = FilePocketJs.createFilePocket(filePocketId);
+        if (documents.length > 0) {
+            filePocket.setDocuments(documents);
+        }
     });
 </script>
 </body>
