--- a/src/main/resources/templates/reference/reference/edit.html
+++ b/src/main/resources/templates/reference/reference/edit.html
@@ -27,6 +27,28 @@
         </div>
         <div class="col-sm-3">
             <div class="form-group">
+                <label for="subjectId" class="col-sm-2 control-label">学科：</label>
+                <div class="col-sm-10 no-padding">
+                    <select th:field="*{subjectId}" class="form-control" id="subjectId" name="subjectId"
+                            th:with="subjects=${@subject.list()}">
+                        <option value="">请选择</option>
+                        <option th:each="subject : ${subjects}" th:text="${subject.subjectName}"
+                                th:value="${subject.id}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="gradeId" class="col-sm-2 control-label">年级：</label>
+                <div class="col-sm-10 no-padding">
+                    <select th:field="*{gradeId}" class="form-control" id="gradeId" name="gradeId"
+                            th:with="grades=${@grade.list()}">
+                        <option value="">请选择</option>
+                        <option th:each="grade : ${grades}" th:text="${grade.gradeName}"
+                                th:value="${grade.id}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-sm-2 control-label">文件：</label>
                 <div class="col-sm-10" id="file-div" style="height: 50vh">
 
