--- a/src/main/resources/templates/reference/reference/reference.html
+++ b/src/main/resources/templates/reference/reference/reference.html
@@ -14,6 +14,22 @@
                             <label>资料标题：</label>
                             <input type="text" name="referenceTitle"/>
                         </li>
+                        <li>
+                            <label>学科：</label>
+                            <select name="subjectId" th:with="subjects=${@subject.list()}">
+                                <option value="">所有</option>
+                                <option th:each="subject : ${subjects}" th:text="${subject.subjectName}"
+                                        th:value="${subject.id}"></option>
+                            </select>
+                        </li>
+                        <li>
+                            <label>年级：</label>
+                            <select name="gradeId" th:with="grades=${@grade.list()}">
+                                <option value="">所有</option>
+                                <option th:each="grade : ${grades}" th:text="${grade.gradeName}"
+                                        th:value="${grade.id}"></option>
+                            </select>
+                        </li>
                         <!--<li>
                             <label>资料标签：</label>
                             <input type="text" name="referenceTag"/>
@@ -56,8 +72,23 @@
     var removeFlag = [[${@permission.hasPermi('reference:reference:remove')}]];
     var prefix = ctx + "reference/reference";
 
+    let subjects = [[${@subject.list()}]];
+    let grades = [[${@grade.list()}]];
+
+    console.log({subjects, grades});
+
     $(function () {
-        var options = {
+
+        let subjectMap = new Map();
+        subjects.forEach(e => {
+            subjectMap.set(e.id, e.subjectName);
+        })
+        let gradeMap = new Map();
+        grades.forEach(e => {
+            gradeMap.set(e.id, e.gradeName);
+        })
+
+        let options = {
             url: prefix + "/list",
             createUrl: prefix + "/add",
             updateUrl: prefix + "/edit/{id}",
@@ -79,6 +110,26 @@
                     title: '资料标题'
                 },
                 {
+                    field: 'subjectId',
+                    title: '学科',
+                    formatter(value, row, index) {
+                        if ($.common.isNotEmpty(value)) {
+                            value = subjectMap.get(value);
+                        }
+                        return value;
+                    }
+                },
+                {
+                    field: 'gradeId',
+                    title: '年级',
+                    formatter(value, row, index) {
+                        if ($.common.isNotEmpty(value)) {
+                            value = gradeMap.get(value);
+                        }
+                        return value;
+                    }
+                },
+                {
                     field: 'createBy',
                     title: '创建人'
                 },
@@ -94,14 +145,14 @@
                     field: 'updateTime',
                     title: '修改时间'
                 },
-               /* {
-                    field: 'referenceTag',
-                    title: '资料标签'
-                },
-                {
-                    field: 'referenceType',
-                    title: '资料类型'
-                },*/
+                /* {
+                     field: 'referenceTag',
+                     title: '资料标签'
+                 },
+                 {
+                     field: 'referenceType',
+                     title: '资料类型'
+                 },*/
                 {
                     title: '操作',
                     align: 'center',
