--- a/src/main/resources/templates/reference/reference/add.html
+++ b/src/main/resources/templates/reference/reference/add.html
@@ -26,8 +26,30 @@
         </div>
         <div class="col-sm-3">
             <div class="form-group">
-                <label class="col-sm-2 control-label">文件：</label>
-                <div class="col-sm-10" id="file-div" style="height: 50vh">
+                <label for="subjectId" class="col-sm-3 control-label">学科：</label>
+                <div class="col-sm-9 no-padding">
+                    <select class="form-control" id="subjectId" name="subjectId"
+                            th:with="subjects=${@subject.list()}">
+                        <option value="">请选择</option>
+                        <option th:each="subject : ${subjects}" th:text="${subject.subjectName}"
+                                th:value="${subject.id}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="gradeId" class="col-sm-3 control-label">年级：</label>
+                <div class="col-sm-9 no-padding">
+                    <select class="form-control" id="gradeId" name="gradeId"
+                            th:with="grades=${@grade.list()}">
+                        <option value="">请选择</option>
+                        <option th:each="grade : ${grades}" th:text="${grade.gradeName}"
+                                th:value="${grade.id}"></option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">文件：</label>
+                <div class="col-sm-9" id="file-div" style="height: 50vh">
 
                 </div>
             </div>
